# hex-wallet-gen

./: .gitignore  Cargo.toml  README.md
libc/: binding.h
service/: main.go
src/: config.rs  lib.rs
src/types/: crypto.rs  keychain.rs  mod.rs  network.rs
src/types/keypair/: ecdsa_keypair.rs  ed25519_keypair.rs  mod.rs  secp256k1_keypair.rs
