[package]
name = "wallet-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.2"
blake2 = "0.10.6"
bs58 = "0.4.0"
ctr = "0.9.2"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
rand = { version = "0.7.0", features = ["getrandom"] }
scrypt = "0.11.0"
secp256k1 = { version = "0.27.0", features = ["rand-std", "bitcoin_hashes"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sha3 = "0.10.7"

[lib]
crate-type = ["cdylib"]
